--- a/EU/EU.html
+++ b/EU/EU.html
@@ -21,122 +21,111 @@
 			<a href="EU/IT.html"><img src="EU/IT/FLAG.png" width="250"><br>Italia</br><i>(Italy)</i></a></br>
 		</div>		
 		<div class="column4">
-			<img src="EU/ES/FLAG.png" width="250"><br>España</br><i>(Spain)</i><br></br>
-			<!-- Kingdom of Spain Reino de España  -->
+			<a href="EU/ES.html"><img src="EU/ES/FLAG.png" width="250"><br>España</br><i>(Spain)</i></a><br></br>
 		</div>
 	</div>
 		
 	<div class="row">
 		<div class="column4">
-			<img src="EU/PL/FLAG.png" width="250"><br>Polska </br><i>(Poland)</i><br></br>
-			<!-- Republic of Poland Rzeczpospolita Polska  -->
+			<a href="EU/PL.html"><img src="EU/PL/FLAG.png" width="250"><br>Polska </br><i>(Poland)</i></a><br></br>
 		</div>
 		<div class="column4">
-			<img src="EU/RO/FLAG.png" width="250"><br>România</br><i>(Romania)</i><br></br>
+			<a href="EU/RO.html"><img src="EU/RO/FLAG.png" width="250"><br>România</br><i>(Romania)</i></a><br></br>
 		</div>
 		
 		<div class="column4">
 			<a href="EU/NL.html"><img src="EU/NL/FLAG.png" width="250"><br>Nederland</br><i>(The Netherlands)</i></a></br>
 		</div>
 		<div class="column4">
-			<img src="EU/BE/FLAG.png" width="250"><br>België / Belgique / Belgien</br><i>(Belgium)</i><br></br>
+			<a href="EU/BE.html"><img src="EU/BE/FLAG.png" width="250"><br>België / Belgique / Belgien</br><i>(Belgium)</i></a><br></br>
 		</div>
 	</div>
 	
 	<div class="row">
 		<div class="column4">
-			<img src="EU/GR/FLAG.png" width="250"><br>Ελλάδα</br><i>(Greece)</i><br></br>
-			<!-- Hellenic Republic  Ελληνική Δημοκρατία -->
+			<a href="EU/GR.html"><img src="EU/GR/FLAG.png" width="250"><br>Ελλάδα</br><i>(Greece)</i></a><br></br>
 		</div>
 		
 		<div class="column4">
-			<img src="EU/CZ/FLAG.png" width="250"><br>Česká republika</br><i>(Czech Republic)</i><br></br>
-			<!-- Česko -->
+			<a href="EU/CZ.html"><img src="EU/CZ/FLAG.png" width="250"><br>Česko</br><i>(Czech Republic)</i></a><br></br>
+			<!--  -->
 		</div>
 		<div class="column4">
-			<img src="EU/PT/FLAG.png" width="250"><br>Portugal</br><i>(Portugal)</i><br></br>
+			<a href="EU/PT.html"><img src="EU/PT/FLAG.png" width="250"><br>Portugal</br><i>(Portugal)</i></a><br></br>
 		</div>
 		<div class="column4">
-			<img src="EU/HU/FLAG.png" width="250"><br>Magyarország</br><i>(Hungary)</i><br></br>
+			<a href="EU/HU.html"><img src="EU/HU/FLAG.png" width="250"><br>Magyarország</br><i>(Hungary)</i></a><br></br>
 		</div>
 	</div>
 		
 	<div class="row">
 		<div class="column4">
-			<img src="EU/AT/FLAG.png" width="250"><br>Österreich</br><i>(Austria)</i><br></br>
-			<!-- Republic of Austria Republik Österreich -->
+			<a href="EU/AT.html"><img src="EU/AT/FLAG.png" width="250"><br>Österreich</br><i>(Austria)</i></a><br></br>
 		</div>
 		<div class="column4">
-			<img src="EU/BG/FLAG.png" width="250"><br>България</br><i>(Bulgaria)</i><br></br>
-			<!-- Republic of Bulgaria Република България -->
+			<a href="EU/BG.html"><img src="EU/BG/FLAG.png" width="250"><br>България</br><i>(Bulgaria)</i></a><br></br>
 		</div>
 		<div class="column4">
-			<img src="EU/SK/FLAG.png" width="250"><br>Slovensko</br><i>(Slovakia)</i><br></br>
-			<!-- Slovak Republic Slovenská republika  -->
+			<a href="EU/SK.html"><img src="EU/SK/FLAG.png" width="250"><br>Slovensko</br><i>(Slovakia)</i></a><br></br>
 		</div>
 		
 		<div class="column4">
-			<a href="../UK/UK/IRL.html"><img src="../UK/UK/IRL/FLAG.png" width="250"><br>Éire</br><i>(Ireland)</i><br></br>
+			<a href="../UK/UK/IRL.html"><img src="../UK/UK/IRL/FLAG.png" width="250"><br>Éire</br><i>(Ireland)</i></a><br></br>
 		</div>
 	</div>
 		
 	<div class="row">
 		<div class="column4">
-			<img src="EU/HR/FLAG.png" width="250"><br>Hrvatska</br><i>(Croatia)</i><br></br>
-			<!-- Republic of Croatia Republika Hrvatska -->
+			<a href="EU/HR.html"><img src="EU/HR/FLAG.png" width="250"><br>Hrvatska</br><i>(Croatia)</i></a><br></br>
 		</div>
 		<div class="column4">
-			<img src="EU/LT/FLAG.png" width="250"><br>Lietuva</br><i>(Lithuania)</i><br></br>
-			<!-- Republic of Lithuania Lietuvos Respublika -->
+			<a href="EU/LT.html"><img src="EU/LT/FLAG.png" width="250"><br>Lietuva</br><i>(Lithuania)</i></a><br></br>
 		</div>
 		<div class="column4">
-			<img src="EU/SI/FLAG.png" width="250"><br>Slovenija</br><i>(Slovenia)</i><br></br>
-			<!-- Republic of Slovenia Republika Slovenija -->
+			<a href="EU/SI.html"><img src="EU/SI/FLAG.png" width="250"><br>Slovenija</br><i>(Slovenia)</i></a><br></br>
 		</div>
 		
 		<div class="column4">
-			<img src="EU/LV/FLAG.png" width="250"><br>Latvija</br><i>(Latvia)</i><br></br>
-			<!-- Republic of Latvia Latvijas Republika -->
+			<a href="EU/LV.html"><img src="EU/LV/FLAG.png" width="250"><br>Latvija</br><i>(Latvia)</i></a><br></br>
 		</div>
 	</div>
 	
 	<div class="row">
 		<div class="column">
-			<img src="EU/EE/FLAG.png" width="250"><br>Eesti</br><i>(Estonia)</i><br></br>
-			<!-- Republic of Estonia Eesti Vabariik  -->
+			<a href="EU/EE.html"><img src="EU/EE/FLAG.png" width="250"><br>Eesti</br><i>(Estonia)</i></a><br></br>
 		</div>
 		<div class="column">
-			<img src="EU/LU/FLAG.png" width="250"><br>Lëtzebuerg / Luxemburg</br><i>(Luxembourg)</i><br></br>
-			<!-- Grand Duchy of Luxembourg
-			Groussherzogtum Lëtzebuerg (Luxembourgish)
-			Grand-Duché de Luxembourg (French)
-			Großherzogtum Luxemburg (German) -->
+			<a href="EU/LU.html"><img src="EU/LU/FLAG.png" width="250"><br>Lëtzebuerg / Luxemburg</br><i>(Luxembourg)</i></a><br></br>			
 		</div>
 		
 		<div class="column">
-			<img src="EU/MT/FLAG.png" width="250"><br>Malta</br>
+			<a href="EU/MT.html"><img src="EU/MT/FLAG.png" width="250"><br>Malta</a></br>
 		</div>
 	</div>
 		
 	<div class="row">
 		<div class="column5">
-			<img src="../ROW/SCAN/IS/FLAG.png" height="100"><br>Ísland</br><i>(Iceland)</i><br></br>
+			<a href="../ROW/SCAN/IS.html"><img src="../ROW/SCAN/IS/FLAG.png" width="250"><br>Ísland</br><i>(Iceland)</i></a><br></br>
 		</div>
 		<div class="column5">
-			<img src="../ROW/SCAN/NO/FLAG.png" height="100"><br>Norge</br><i>(Norway)</i><br></br>
+			<a href="../ROW/SCAN/NO.html"><img src="../ROW/SCAN/NO/FLAG.png" width="250"><br>Norge</br><i>(Norway)</i></a><br></br>
 		</div>
 		<div class="column5">
-			<img src="../ROW/SCAN/SE/FLAG.png" height="100"><br>Sverige</br><i>(Sweden)</i><br></br>
+			<a href="../ROW/SCAN/SE.html"><img src="../ROW/SCAN/SE/FLAG.png" width="250"><br>Sverige</br><i>(Sweden)</i></a><br></br>
 		</div>		
 		<div class="column5">
-			<img src="../ROW/SCAN/FI/FLAG.png" height="100"><br>Suomi</br><i>(Finland)</i><br></br>
+			<a href="../ROW/SCAN/FI.html"><img src="../ROW/SCAN/FI/FLAG.png" width="250"><br>Suomi</br><i>(Finland)</i></a><br></br>
 		</div>
 		<div class="column5">
-			<img src="../ROW/SCAN/DK/FLAG.png" height="100"><br>Danmark</br><i>(Denmark)</i><br></br>
+			<a href="../ROW/SCAN/DK.html"><img src="../ROW/SCAN/DK/FLAG.png" width="250"><br>Danmark</br><i>(Denmark)</i></a><br></br>
 		</div>
 				
 		<div class="column4">
 			<a href="CH.html"><img src="CH/FLAG.png" height="200"><br>Switzerland</br><i>(Schweiz / Suisse / Svizzera / Svizra / Helvetia)</i></a></br>
+		</div>
+		
+		<div class="column4">
+			<a href="EU/UA.html"><img src="EU/UA/FLAG.png" height="200"><br>Україна</br><i>(Ukraine)</i></a><br></br>
 		</div>
 	</div>
 
