--- a/EU/EU/RO.html
+++ b/EU/EU/RO.html
@@ -3,17 +3,14 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../../style.css">
-    <title>France</title>
+    <title>Romania</title>
   </head>
   <body>
-    <h1><img src="FR/ARMS.png" height="175"></h1><h2>République française</br><i>French Republic</i></h2>
+    <h1><img src="RO/ARMS.png" height="175"></h1><h2>România</br><i>Romania</i></h2>
 	
 	<div class="row">
 		<div class="column">
 			<img src="FR/PN/BADGE.png" width="350"><br>Police nationale</br><i>(National Police)</i><br><br>
-		</div>
-		<div class="column">
-			<img src="FR/GN/BADGE.png" width="350"><br>Gendarmerie nationale</br><i>(National Militia)</i><br><br>
 		</div>
 	</div>
 
