--- a/EU/EU/BE.html
+++ b/EU/EU/BE.html
@@ -6,7 +6,7 @@
     <title>Belgium</title>
   </head>
   <body>
-    <h1><img src="BE/ARMS.png" height="175"></h1><h2>België / Belgique / Belgien</br><i>Belgium</i></h2>
+    <h1><img src="BE/SHIELD.png" height="175"></h1><h2>België / Belgique / Belgien</br><i>Belgium</i></h2>
 
 	<div class="row">
 		<div class="column">
