--- a/EU/EU/BG.html
+++ b/EU/EU/BG.html
@@ -6,7 +6,7 @@
     <title>Bulgaria</title>
   </head>
   <body>
-    <h1><img src="BG/ARMS.png" height="175"></h1><h2>Република България</br><i>Republic of Bulgaria</i></h2>
+    <h1><img src="BG/SHIELD.png" height="175"></h1><h2>Република България</br><i>Republic of Bulgaria</i></h2>
 
 	<div class="row">
 		<div class="column">
