--- a/EU/EU/EE.html
+++ b/EU/EU/EE.html
@@ -6,7 +6,7 @@
     <title>Estonia</title>
   </head>
   <body>
-    <h1><img src="EE/ARMS.png" height="175"></h1><h2>Eesti Vabariik</br><i>Republic of Estonia</i></h2>
+    <h1><img src="EE/SHIELD.png" height="175"></h1><h2>Eesti Vabariik</br><i>Republic of Estonia</i></h2>
 
 	<div class="row">
 		<div class="column">
