--- a/EU/EU/LU.html
+++ b/EU/EU/LU.html
@@ -6,7 +6,7 @@
     <title>Luxembourg</title>
   </head>
   <body>
-    <h1><img src="LU/ARMS.png" height="175"></h1><h2>Groussherzogtum Lëtzebuerg / Grand-Duché de Luxembourg / Großherzogtum Luxemburg</br><i>Grand Duchy of Luxembourg</i></h2>
+    <h1><img src="LU/SHIELD.png" height="175"></h1><h2>Groussherzogtum Lëtzebuerg / Grand-Duché de Luxembourg / Großherzogtum Luxemburg</br><i>Grand Duchy of Luxembourg</i></h2>
 
 	<div class="row">
 		<div class="column">
