--- a/EU/EU/NL.html
+++ b/EU/EU/NL.html
@@ -6,7 +6,7 @@
     <title>Netherlands</title>
   </head>
   <body>
-    <h1><img src="NL/ARMS.png" height="175"></h1><h2>Nederland</br><i>The Netherlands</i></h2>
+    <h1><img src="NL/SHIELD.png" height="175"></h1><h2>Nederland</br><i>The Netherlands</i></h2>
 	
 	<div class="row">
 		<div class="column">
