--- a/EU/EU/PT.html
+++ b/EU/EU/PT.html
@@ -6,7 +6,7 @@
     <title>Portugal</title>
   </head>
   <body>
-    <h1><img src="PT/ARMS.png" height="175"></h1><h2>Portugal</br><i>Portugal</i></h2>
+    <h1><img src="PT/SHIELD.png" height="175"></h1><h2>Portugal</br><i>Portugal</i></h2>
 
 	<div class="row">
 		<div class="column">
