--- a/EU/EU/UA.html
+++ b/EU/EU/UA.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../../style.css">
-    <title>Latvia</title>
+    <title>Ukraine</title>
   </head>
   <body>
-    <h1><img src="LV/SHIELD.png" height="175"></h1><h2>Latvijas Republika</br><i>Republic of Latvia</i></h2>
+    <h1><img src="UA/ARMS.png" height="175"></h1><h2>Україна</br><i>Ukraine</i></h2>
 
 	<div class="row">
 		<div class="column">
