--- a/HOME.html
+++ b/HOME.html
@@ -46,8 +46,8 @@
 		
 	<div class="row">
 		<a href="ROW/CN.html"><img src="ROW/CN/FLAG.png" height="200"></a>
-		<a href="ROW/CN/HK.html"><img src="ROW/CN/HK/FLAG.png" height="200"></a>
-		<!-- Being a china subfolder is cringe but made sense at one point -->
+		<!-- <a href="ROW/CN/HK.html"><img src="ROW/CN/HK/FLAG.png" height="200"></a> -->
+		<!-- Being a china subfolder is cringe but makes sense -->
 		
 		<a href="ROW/JP.html"><img src="ROW/JP/FLAG.png" height="200"></a>
 		<a href="ROW/KR.html"><img src="ROW/KR/FLAG.png" height="200"></a>
