--- a/ROW/AUS-2.html
+++ b/ROW/AUS-2.html
@@ -10,7 +10,7 @@
 
 	</head>
 	<body>
-    <h1><img src="AUS/ARMS.png" height="250"></h1><h2>The Commonwealth of Australia</h2>
+    <h1><img src="AUS/SHIELD.png" height="250"></h1><h2>The Commonwealth of Australia</h2>
 	
 	<div class="row">
 		<div class="column">
