--- a/ROW/MIL-MP.html
+++ b/ROW/MIL-MP.html
@@ -249,12 +249,23 @@
 	<div class="row">
 		<div class="column2"> <!-- Russia -->
 			<img src="RU/FLAG.png" height="200"></br>
-					<img src="RU/Defence/BADGE.png" height="150">
-					<br>Вооружённые си́лы Росси́йской Федера́ции</br><i>(Armed Forces of the Russian Federation)</i></br>
-							<div class="column0">
-								<img src="RU/Defence/MP.png" height="100"><br>Главное управление военной полиции Минобороны РФ</br><i>(Main Directorate of the Military Police)</i></br>
-							</div>
+				<img src="RU/Defence/BADGE.png" height="150">
+				<br>Вооружённые си́лы Росси́йской Федера́ции</br><i>(Armed Forces of the Russian Federation)</i></br>
+						<div class="column0">
+							<img src="RU/Defence/MP.png" height="100"><br>Главное управление военной полиции Минобороны РФ</br><i>(Main Directorate of the Military Police)</i></br>
+						</div>
 					</div>
+					
+				<div class="column2"> <!-- Ukraine -->
+					<img src="../EU/EU/UA/FLAG.png" height="200"></br>
+					<img src="../EU/EU/UA/Defence/BADGE.png" height="150">
+					<br>Збройні сили України</br><i>(Ukrainian Armed Forces)</i></br>
+						<div class="row">
+							<!-- <div class="column"> -->
+								<img src="../EU/EU/UA/Defence/MP.png" height="100"><br>Військова служба правопорядку у Збройних Силах України</br><i>(Ukrainian Military Law-Enforcement Service)</i></br>
+							<!-- </div> -->
+						</div>
+				</div>
 		</div></br>
 	<div class="row">
 
