--- a/ROW/MIL.html
+++ b/ROW/MIL.html
@@ -364,6 +364,24 @@
 						</div>
 					</div>
 			</div>
+			<div class="column2"> <!-- Ukraine -->
+			<img src="../EU/EU/UA/FLAG.png" height="200"></br>
+				<div class="column0">
+					<img src="../EU/EU/UA/Defence/BADGE.png" height="150">
+					<br>Збройні сили України</br><i>(Ukrainian Armed Forces)</i></br>
+						<div class="row">
+							<div class="column">
+								<img src="../EU/EU/UA/Defence/Army.png" height="100"><br>Сухопутні війська Збройних сил України</br><i>(Ukrainian Ground Forces)</i></br>
+							</div>
+							<div class="column">
+								<img src="../EU/EU/UA/Defence/Navy.png" height="100"><br>Військово-морські сили Збройних сил України, ВМС ЗСУ</br><i>(Ukrainian Naval Forces)</i></br>
+							</div>
+							<div class="column">
+								<img src="../EU/EU/UA/Defence/Air Force.png" height="100"><br>Повітряні сили Збройних сил України</br><i>(Ukrainian Air Force)</i></br>
+							</div>
+						</div>
+					</div>
+			</div>
 		</div></br>
 	<div class="row">
 
