--- a/ROW/SCAN/SE.html
+++ b/ROW/SCAN/SE.html
@@ -7,7 +7,7 @@
 	<p ALIGN=LEFT ><a href="../SCAN.html">BACK</a></p>
   </head>
   <body>
-    <h1><img src="SE/ARMS.png" height="175"></h1><h2>Konungariket Sverige</br><i>(The Kingdom of Sweden)</i></h2>
+    <h1><img src="SE/SHIELD.png" height="175"></h1><h2>Konungariket Sverige</br><i>(The Kingdom of Sweden)</i></h2>
 
 	<div class="row">
 		<div class="column">
