--- a/USA/USA.html
+++ b/USA/USA.html
@@ -51,7 +51,7 @@
 		<a href="State/MA.html"><img src="State/MA/FLAG.png" height="150"><br>Massachusetts</a><br><br>
 		<a href="State/MI.html"><img src="State/MI/FLAG.png" height="150"><br>Michigan</a><br><br>
 		<a href="State/MN.html"><img src="State/MN/FLAG2.png" height="150"><br>Minnesota</a><br><br>
-		<a href="State/MS.html"><img src="State/MS/FLAG.png" height="150"><br>Mississippi</a><br><br>
+		<a href="State/MS.html"><img src="State/MS/FLAG2.png" height="150"><br>Mississippi</a><br><br>
 		<a href="State/MO.html"><img src="State/MO/FLAG.png" height="150"><br>Missouri</a><br><br>
 		<a href="State/MT.html"><img src="State/MT/FLAG.png" height="150"><br>Montana</a><br><br>
 		<a href="State/NE.html"><img src="State/NE/FLAG.png" height="150"><br>Nebraska</a><br><br>
@@ -81,7 +81,7 @@
 		<a href="State/SD.html"><img src="State/SD/FLAG.png" height="150"><br>South Dakota</a><br><br>
 		<a href="State/TN.html"><img src="State/TN/FLAG.png" height="150"><br>Tennessee</a><br><br>
 		<a href="State/TX.html"><img src="State/TX/FLAG.png" height="150"><br>Texas</a><br><br>
-		<a href="State/UT.html"><img src="State/UT/FLAG.png" height="150"><br>Utah</a><br><br>
+		<a href="State/UT.html"><img src="State/UT/FLAG2.png" height="150"><br>Utah</a><br><br>
 		<a href="State/VT.html"><img src="State/VT/FLAG.png" height="150"><br>Vermont</a><br><br>
 		<a href="State/VA.html"><img src="State/VA/FLAG.png" height="150"><br>Virginia</a><br><br>
 		<a href="State/WA.html"><img src="State/WA/FLAG.png" height="150"><br>Washington</a><br><br>
