--- a/ROW/CN.html
+++ b/ROW/CN.html
@@ -7,29 +7,29 @@
 	<p ALIGN=LEFT ><a href="../HOME.html">HOME</a></p>
   </head>
   <body>
-    <h1><img src="CN/FLAG.png" height="175"></h1><h2>中华人民共和国</h2>
+    <h1><img src="CN/ARMS.png" height="200"></h1><h2>中华人民共和国</h2>
 		<h3><i>(People's Republic of China)</i></h3>
 
-		<!-- <div class="row">
+		<div class="row">
 			<div class="column">
-				<a href="CN/HK.html"><img src="CN/HK/FLAG.png" height="300"><br>Special Administrative Region of Hong Kong</a><br><br>
+				<a href="CN/HK.html"><img src="CN/HK/ARMS.png" height="300"><br>中華人民共和國香港特別行政區<br><i>(Special Administrative Region of Hong Kong)</i></a><br><br>
 			</div>
 			<div class="column">
-				<a href="CN/Macao"><img src="CN/Macao/FLAG.png" height="300"><br>Macao</a><br><br>
+				<img src="CN/Macau/ARMS.png" height="300"><br>中華人民共和國澳門特別行政區<br><i>(Special Administrative Region of Macau)</i><br><br>
 			</div>
 			<div class="column">
-				<a href="CN/TW"><img src="CN/TW/FLAG.png" height="300"><br>Republic of Taiwan</a><br><br>
+				<img src="CN/TW/ARMS.png" height="300"><br>中華民國<br><i>(Republic of Taiwan)</i><br><br>
 			</div>
-		</div> -->
+		</div>
 
 
 
 		<div class="row">
 			<div class="column">
-				<!-- <a href="CN/MPS"> --><img src="CN/MPS/BADGE.png" height="300"><br>Chinese Ministry of Public Security (GongAn)</a><br><br>
+				<img src="CN/MPS/BADGE.png" height="300"><br>中国人民警察<br><i>(People's Police of China)</i><br><br>
 			</div>
-			<!-- <div class="column"> -->
-				<!-- <a href="CN/PAP"><img src="CN/PAP/BADGE.png" height="300"><br>Chinese People's Armed Police</a><br><br> -->
+			<div class="column">
+				<img src="CN/PAP/BADGE.png" height="300"><br>中国人民武装警察<br><i>(Chinese People's Armed Police)</i><br><br>
 		</div>
 
 
