--- a/ROW/MIL-2.html
+++ b/ROW/MIL-2.html
@@ -464,6 +464,29 @@
 					<!-- and apparently coast guard -->
 				</div>
 			</div>
+			<div class="column2"> <!-- Ukraine -->
+			<img src="../EU/EU/UA/FLAG.png" height="200"></br>
+					<img src="../EU/EU/UA/Defence/BADGE.png" height="150">
+					<br>Збройні сили України</br><i>(Ukrainian Armed Forces)</i></br>
+						<div class="row">
+							<div class="column">
+								<img src="../EU/EU/UA/Defence/Army.png" height="100"><br>Сухопутні війська Збройних сил України</br><i>(Ukrainian Ground Forces)</i></br>
+							</div>
+							<div class="column">
+								<img src="../EU/EU/UA/Defence/Navy.png" height="100"><br>Військово-морські сили Збройних сил України, ВМС ЗСУ</br><i>(Ukrainian Naval Forces)</i></br>
+							</div>
+							<div class="column">
+								<img src="../EU/EU/UA/Defence/Air Force.png" height="100"><br>Повітряні сили Збройних сил України</br><i>(Ukrainian Air Force)</i></br>
+							</div>
+							<div class="column2">
+								<img src="../EU/EU/UA/Defence/Marine.png" height="100"><br>України</br><i>( )</i></br>
+							</div>
+							<div class="column2">
+								<img src="../EU/EU/UA/Defence/Air Force.png" height="100"><br>України</br><i>( )</i></br>
+							</div>
+						</div>
+					</div>
+			</div>
 		</div></br>
 	<div class="row">
 
