--- a/ROW/SCAN/IS.html
+++ b/ROW/SCAN/IS.html
@@ -7,7 +7,7 @@
 	<p ALIGN=LEFT ><a href="../SCAN.html">BACK</a></p>
   </head>
   <body>
-    <h1><img src="../SCAN/IS/ARMS.png" height="175"></h1><h2>Ísland</br><i>(Iceland)</i></h2>
+    <h1><img src="../SCAN/IS/SHIELD.png" height="175"></h1><h2>Ísland</br><i>(Iceland)</i></h2>
 
 	<div class="row">
 		<div class="column">
