--- a/UK/UK-2.html
+++ b/UK/UK-2.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="column23">
-		<h1><img src="../UK/UK/SHIELD.png" height="250"></h1><h2>The United Kingdom of<br>Great Britain and Northern Ireland</h2>
+		<h1><img src="../UK/UK/ARMS.png" height="250"></h1><h2>The United Kingdom of<br>Great Britain and Northern Ireland</h2>
 
 		<div class="row">
 			<div class="column2">
