Random Image Scripts

--- a/CAN/Transport2.html
+++ b/CAN/Transport2.html
@@ -33,7 +33,8 @@
 			<img id="transit" src="" height="250">
 			<br>Transit Enforcement Agencies</a><br><br>
 		
-
+					<!-- EXTREMELY chuffed with the image randomizer, been wanting this since like 2021 -->
+					
 				<script>
 					function getRandomImage(folder, images) {
 					if (images.length === 0) {
