--- a/USA/Transport.html
+++ b/USA/Transport.html
@@ -43,6 +43,8 @@
 		</div>
 		
 		
+					<!-- EXTREMELY chuffed with the image randomizer, been wanting this since like 2021
+						Though now I want more places to use it -->
 			<script>
 				function getRandomImage(folder, images) {
 				if (images.length === 0) {
