Update agency images and references, add fire dept icons (AI summ)
Replaced and updated various agency badge and seal images across multiple US states and Canadian provinces. Updated HTML files to reference new or renamed images, including new fire department icons for Alaska cities. Removed obsolete .webp and .pdf files, and updated references for Rhode Island and Washington State Police badges. Also reorganized Fairbanks Airport images under a new directory structure. (AI summ)

--- a/CAN/Provinces/BC-2.html
+++ b/CAN/Provinces/BC-2.html
@@ -26,7 +26,7 @@
 		<h1>Provincial Agencies</h1>
 		
 		<div class="column2">
-			<a href="BC/BCSS.html"><img src="BC/Sheriff/BCSS.ico" height="150"><br>British Columbia<br>Sheriffs Service</a><br>
+			<a href="BC/BCSS.html"><img src="BC/Sheriff/BADGE.png" height="150"><br>British Columbia<br>Sheriffs Service</a><br>
 		</div>
 		
 		<div class="column2">
@@ -115,7 +115,7 @@
 			<img src="BC/Police/Saanich2.png" height="200"><br>Saanich Police Department<br></br>
 		</div>	
 		<div class="column">
-			<img src="BC/Police/New Westminster.png" height="200"><br>New Westminster Police Department<br></br>
+			<img src="BC/Police/New Westminster2.png" height="200"><br>New Westminster Police Department<br></br>
 		</div>	
 		<div class="column">
 			<img src="BC/Police/Port Moody.png" height="200"><br>Port Moody Police Department<br></br>
