--- a/USA/State/AK.html
+++ b/USA/State/AK.html
@@ -45,9 +45,9 @@
 			</div>
 			
 			<div class="column2">
-				<img src="!Parks/AK/LOGO.png" height="150"><br>Alaska Department of Fish & Game</br>
+				<img src="!Parks/AK/LOGO.png" height="150"><br>Alaska State Parks</br>
 				<div class="column0">
-					<img src="!Parks/AK/BADGE2.png" height="80"><br>Alaska Department of Fish & Game</br>
+					<img src="!Parks/AK/BADGE2.png" height="80"><br>Alaska State Parks Ranger</br>
 				</div>
 			</div>
 			
@@ -63,16 +63,16 @@
 			
 			<div class="column2">
 				<div class="column2">
-					<img src="../Transport/Air/ANC/BADGEa.png" height="200"><br>
+					<img src="../Transport/Port/AK/ANC/BADGEa.png" height="200"><br>
 				</div>
 				<div class="column2">
-					<img src="../Transport/Air/ANC/BADGEb.png" height="200"><br>
+					<img src="../Transport/Port/AK/ANC/BADGEb.png" height="200"><br>
 				</div>
 				Anchorage Airport Police & Fire
 			</div>
 			
 			<div class="column2">
-				<img src="AK/Fairbanks/Airport.png" height="200"><br>Fairbanks Airport</br>
+				<img src="../Transport/Port/AK/FAI/Airport.png" height="200"><br>Fairbanks Airport</br>
 			</div>
 		
 		</div>
@@ -110,32 +110,44 @@
 		
 		<div class="column">
 			<img src="AK/Fairbanks/SEAL.png" height="150"><br>City of Fairbanks</br>
-			<div class="column0">
+			<div class="column2">
 				<img src="AK/Fairbanks/BADGE.png" height="80"><br>Fairbanks Police</br>
+			</div>
+			<div class="column2">
+				<img src="AK/Fairbanks/Fire.png" height="80"><br>Fairbanks Fire</br>
 			</div>
 		</div>
 		
 		<div class="column">
-			<img src="AK/Juneau/SEAL.png" height="150"><br>City & Bureau of Juneau</br>
-			<div class="column0">
+			<img src="AK/Juneau/SEAL.png" height="150"><br>City & Borough of Juneau</br>
+			<div class="column2">
 				<img src="AK/Juneau/BADGE.png" height="80"><br>Juneau Police</br>
+			</div>
+			<div class="column2">
+				<img src="AK/Juneau/Fire.png" height="80"><br>Capital City Fire</br>
 			</div>
 		</div>
 	
 	</div>
 	<div class="row">
 	
-		<div class="column">
-			<img src="AK/Sitka/SEAL.png" height="150"><br>City & Bureau of Sitka</br>
-			<div class="column0">
+		<div class="column2">
+			<img src="AK/Sitka/SEAL.png" height="150"><br>City & Borough of Sitka</br>
+			<div class="column2">
 				<img src="AK/Sitka/BADGE.png" height="80"><br>Sitka Police</br>
+			</div>
+			<div class="column2">
+				<img src="AK/Sitka/Fire.png" height="80"><br>Sitka Fire</br>
 			</div>
 		</div>
 		
-		<div class="column">
+		<div class="column2">
 			<img src="AK/Kodiak/SEAL.png" height="150"><br>City of Kodiak</br>
-			<div class="column0">
+			<div class="column2">
 				<img src="AK/Kodiak/BADGE.png" height="80"><br>Kodiak Police</br>
+			</div>
+			<div class="column2">
+				<img src="AK/Kodiak/Fire.png" height="80"><br>Kodiak Fire</br>
 			</div>
 		</div>
 		
