--- a/USA/State/RI.html
+++ b/USA/State/RI.html
@@ -23,7 +23,7 @@
 	<div class="column">
 
 		<div class="column2">
-			<a href="!Trooper/RISP.html"><img src="!Trooper/RISP/!BADGE.png" height="200"><br>Rhode Island State Police</a><br><br>
+			<a href="!Trooper/RISP.html"><img src="!Trooper/RISP/!BADGEb.png" height="200"><br>Rhode Island State Police</a><br><br>
 		</div>
 		
 		<div class="column2">
