--- a/USA/StatePolice.html
+++ b/USA/StatePolice.html
@@ -44,7 +44,7 @@
 			<a href="State/!Trooper/IASP.html"><img src="State/!Trooper/IASP/!BADGE.png" height="250"><br>Iowa State Patrol</a><br><br>
 			<a href="State/!Trooper/KHP.html"><img src="State/!Trooper/KHP/!BADGE.png" height="250"><br>Kansas Highway Patrol</a><br><br>
 			<a href="State/!Trooper/KSP.html"><img src="State/!Trooper/KSP/!BADGE.png" height="250"><br>Kentucky State Police</a><br><br>
-			<a href="State/!Trooper/LSP.html"><img src="State/!Trooper/LSP/@BADGE.ico" height="250"><br>Louisiana State Police</a><br><br>
+			<a href="State/!Trooper/LSP.html"><img src="State/!Trooper/LSP/!BADGE.png" height="250"><br>Louisiana State Police</a><br><br>
 			<a href="State/!Trooper/MESP.html"><img src="State/!Trooper/MESP/!BADGE.png" height="250"><br>Maine State Police</a><br><br>
 			<a href="State/!Trooper/MDSP.html"><img src="State/!Trooper/MDSP/!BADGE.png" height="250"><br>Maryland State Police</a><br><br>
 		</div>	
@@ -71,7 +71,7 @@
 			<a href="State/!Trooper/OKHP.html"><img src="State/!Trooper/OKHP/!BADGE.png" height="250"><br>Oklahoma Highway Patrol</a><br><br>
 			<a href="State/!Trooper/OSP.html"><img src="State/!Trooper/OSP/!BADGE.png" height="250"><br>Oregon State Police</a><br><br>
 			<a href="State/!Trooper/PSP.html"><img src="State/!Trooper/PSP/!BADGE.png" height="250"><br>Pennsylvania State Police</a><br><br>
-			<a href="State/!Trooper/RISP.html"><img src="State/!Trooper/RISP/!BADGE.png" height="250"><br>Rhode Island State Police</a><br><br>
+			<a href="State/!Trooper/RISP.html"><img src="State/!Trooper/RISP/!BADGEb.png" height="250"><br>Rhode Island State Police</a><br><br>
 			<a href="State/!Trooper/SCHP.html"><img src="State/!Trooper/SCHP/!BADGE.png" height="250"><br>South Carolina Highway Patrol</a><br><br>
 		</div>
 			
@@ -82,7 +82,7 @@
 			<a href="State/!Trooper/UHP.html"><img src="State/!Trooper/UHP/!BADGE.png" height="250"><br>Utah Highway Patrol</a><br><br>
 			<a href="State/!Trooper/VTSP.html"><img src="State/!Trooper/VTSP/!BADGE.png" height="250"><br>Vermont State Police</a><br><br>
 			<a href="State/!Trooper/VASP.html"><img src="State/!Trooper/VASP/!BADGE.png" height="250"><br>Virginia State Police</a><br><br>
-			<a href="State/!Trooper/WASP.html"><img src="State/!Trooper/WASP/!BADGE.png" height="250"><br>Washington State Police</a><br><br>
+			<a href="State/!Trooper/WASP.html"><img src="State/!Trooper/WASP/!BADGE2.png" height="250"><br>Washington State Patrol</a><br><br>
 			<a href="State/!Trooper/WVSP.html"><img src="State/!Trooper/WVSP/!BADGE.png" height="250"><br>West Virginia State Police</a><br><br>
 			<a href="State/!Trooper/WISP.html"><img src="State/!Trooper/WISP/!BADGE.png" height="250"><br>Wisconsin State Patrol</a><br><br>
 			<a href="State/!Trooper/WYHP.html"><img src="State/!Trooper/WYHP/!BADGE.png" height="250"><br>Wyoming Highway Patrol</a><br><br>
