--- a/ROW/ZA.html
+++ b/ROW/ZA.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../style.css">
-    <title>Russia</title>
+    <title>South Africa</title>
 	<p ALIGN=LEFT ><a href="../HOME.html">HOME</a></p>
   </head>
   <body>
