--- a/USA/State/CA-2.html
+++ b/USA/State/CA-2.html
@@ -252,7 +252,7 @@
 				<div class="column4">
 					<img src="CA/LA/Seals/Downey.png" height="80"><br>City of<br>Downey</br>
 					<div class="column2">
-						<img src="CA/LA/Police/Downey.png" height="40"><br>Downey Police Department<br></br>
+						<img src="CA/LA/Police/DowneyM.png" height="40"><br>Downey Police Department<br></br>
 					</div>
 					<div class="column2">
 						<img src="CA/OES/FIREBADGE.png" height="40"><br>OES - Fire Rescue</br>
@@ -295,7 +295,7 @@
 				<div class="column4">
 					<img src="CA/LA/Seals/Burbank.png" height="80"><br>City of<br>Burbank</br>
 					<div class="column2">
-						<img src="CA/LA/Police/Burbank.png" height="40"><br>Burbank Police Department<br></br>
+						<img src="CA/LA/Police/BurbankM.png" height="40"><br>Burbank Police Department<br></br>
 					</div>
 					<div class="column2">
 						<img src="CA/LA/Fire/Burbank.png" height="40"><br>Burbank Fire Department<br></br>
@@ -562,7 +562,7 @@
 				<div class="column4">
 					<img src="CA/LA/Seals/Azusa.png" height="80"><br>City of<br>Azusa</br>
 					<div class="column2">
-						<img src="CA/LA/Police/Azusa2.png" height="40"><br>Azusa Police Department<br></br>
+						<img src="CA/LA/Police/Azusa.png" height="40"><br>Azusa Police Department<br></br>
 					</div>
 					<div class="column2">
 						<img src="CA/LA/LACoFD/BADGE.png" height="40"><br>Fire Contract</br>
@@ -648,7 +648,7 @@
 				<div class="column4">
 					<img src="CA/LA/Seals/Monrovia.png" height="80"><br>City of<br>Monrovia</br>
 					<div class="column2">
-						<img src="CA/LA/Police/Monrovia.png" height="40"><br>Monrovia Police Department<br></br>
+						<img src="CA/LA/Police/MonroviaM.png" height="40"><br>Monrovia Police Department<br></br>
 					</div>
 					<div class="column2">
 						<img src="CA/LA/Fire/Monrovia.png" height="40"><br>Monrovia Fire Department<br></br>
