--- a/USA/State/CA.html
+++ b/USA/State/CA.html
@@ -122,10 +122,10 @@
 		<div class="column4">
 			<img src="CA/Riverside/SEAL.png" height="200"><br>Riverside County</br>
 			<div class="column">
-				<img src="CA/Riverside/Sheriff.png" height="80"><br>Riverside County Sheriff</br>
+				<img src="CA/Riverside/County/Sheriff.png" height="80"><br>Riverside County Sheriff</br>
 			</div>
 			<div class="column">
-				<img src="CA/Riverside/Fire.png" height="80"><br>Riverside County Fire</br>
+				<img src="CA/Riverside/County/Fire.png" height="80"><br>Riverside County Fire</br>
 			</div>
 			<div class="column">
 				<img src="CA/Riverside/Seals/Riverside.png" height="80"><br>City of<br>Riverside</br>
